# codeskew

./: .gitignore  ACKNOWLEDGEMENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  TODOLIST.md  justfile  test_input.rs  test_simple.rs
include/: dispatch_once.wgsl
src/: cli.rs  config.rs  error.rs  gradient.rs  highlight.rs  layout.rs  lib.rs  main.rs  shader_data.rs  test.rs  text_3d.wgsl  transform.rs
src/glyphon/: cache.rs  font_system.rs  ligature.rs  ligature_config.rs  mod.rs  text_rendering.rs  texture_renderer.rs  wgpu_setup.rs
src/nerdfont/: loader.rs  mod.rs  quic.rs
src/output/: composite_renderer.rs  mod.rs  output_generator.rs  save_methods.rs
src/shaders/: advanced_text3d.wgsl  animated_gradient.wgsl  composite.wgsl  downsample.wgsl  glyphon_3d.wgsl  shadow.wgsl  text3d.wgsl
src/toy/: bind.rs  blit.rs  compile.rs  context.rs  mod.rs  pp.rs  toyrs.rs  utils.rs
src/toy/include/std/: color.wgsl  math.wgsl  noise.wgsl  string.wgsl
src/webgpu/: command_state.rs  elite_init.rs  elite_renderer.rs  mod.rs  text_state.rs  uniforms.rs
wgsl/: bandwidth.wgsl  bubbles.wgsl  channel_test.wgsl  codeskew_unified.wgsl  dispatch_once.wgsl  gears.wgsl  test_jinja.wgsl  zeroshot.wgsl  zeroshot_original.wgsl
