[package]
name = "codeskew"
version = "0.1.0"
edition = "2024"
authors = ["David Maple<david@cyrup.ai>"]
description = "A tool for rendering code with 3D perspective effects"
repository = "https://github.com/yourusername/codeskew"
license = "MIT"
readme = "README.md"

# Define the binary target
[[bin]]
name = "codeskew"
path = "src/main.rs"

# Define the library target
[lib]
name = "codeskew"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
base64 = "0.22"
bitvec = "1.0"
cached = "0.55"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colorgrad = "0.7"
env_logger = "0.11"
euclid = "0.22"
futures-intrusive = "0.5"

gif = "0.13"
http-cache-reqwest = "0.16"
image = { version = "0.25", features = ["webp"] }
indexmap = "2.10"
instant = "0.1"
itertools = "0.14"
lazy-regex = "3.4"
log = "0.4"
notify = "8.1"

reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
rayon = "1.10"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
svg = "0.18"
syntect = "5.2"
thiserror = "2.0"
unicode-normalization = "0.1"
wasm-bindgen = "0.2"
webp-animation = "0.9"
# WebGPU for sexy 3D rendering
wgpu = "25.0"
winit = "0.30"
bytemuck = { version = "1.23", features = ["derive"] }
nalgebra = "0.33"
pollster = "0.4"
flume = "0.11"
# High-performance text rendering
glyphon = "0.9"
cosmic-text = "0.14"
# Async runtime
tokio = { version = "1.46", features = ["full"] }
# WebP support
webp = "0.3"

snailquote = "0.3"
futures = "0.3"
half = "2.6"
# Nerd font loader dependencies
directories = "6.0"
zip = "4.2"
# MiniJinja for WGSL templating
minijinja = { version = "2.5", features = ["builtins"] }

[features]
default = ["winit"]
winit = []

[dev-dependencies]
tempfile = "3.20"
assert_cmd = "2.0"
assert_fs = "1.1"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen-futures = "0.4"
